Content overflow fix

--- a/src/pages/accounts/accountPageSections/purchasehistory/PurchaseHistory.css
+++ b/src/pages/accounts/accountPageSections/purchasehistory/PurchaseHistory.css
@@ -6,7 +6,7 @@
 .HistorySidebar {
     background-color: #008CBA;
     top: 70px; /* Height of the navbar */
-    height: 100vh;
+    height: calc(100vh - 70px);
     display: flex;
     position: sticky;
     justify-content: center;
