--- a/src/pages/accounts/cart/CartPage.css
+++ b/src/pages/accounts/cart/CartPage.css
@@ -139,7 +139,7 @@
 .CartSidebar {
     background-color: #f5f5f5;
     top: 70px; /* Height of the navbar */
-    height: 100vh;
+    height: calc(100vh - 70px);
     position: sticky;
     display: flex;
     justify-content: center;
